Wed Jun 17 12:13:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: added contibutor name.

Wed Jun 17 10:57:28 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/csv.rb: accept to use Range object for row selection.
	  contributed by Mitsutaka Mimura.
	  [Feature #11267][ruby-dev:49091]

Wed Jun 17 09:50:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/servlet.rb (documentation_search, root_search):
	  requires json for JSON.dump and fix sporadic failures due to
	  the loading order.

Tue Jun 16 19:19:53 2015  Tanaka Akira  <akr@fsij.org>

	* ext/rbconfig/sizeof/extconf.rb: Check several types defined in C99
	  and x86_64 ABI.

	* template/sizes.c.tmpl: Relax a pattern for types.

Tue Jun 16 17:37:01 2015  Koichi Sasada  <ko1@atdot.net>

	* test/objspace/test_objspace.rb: relax pattern because uncollectible
	  flag and marked flag can be false at major GC.
	  [Bug #10852]

Tue Jun 16 04:50:44 2015  Eric Wong  <e@80x24.org>

	* ext/socket/basicsocket.c (bsock_recv): document outbuf
	* ext/socket/unixsocket.c (unix_recvfrom): ditto
	* ext/socket/init.c (rsock_strbuf, recvfrom_locktmp): new functions
	  (rsock_s_recvfrom): support destination buffer as 3rd arg
	  (rsock_s_recvfrom_nonblock): ditto
	* string.c (rb_str_locktmp_ensure): export for internal ext
	* test/socket/test_nonblock.rb: test recv_nonblock
	* test/socket/test_unix.rb: test recv
	  [ruby-core:69543] [Feature #11242]

Tue Jun 16 04:38:02 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal,
	  bsock_recvmsg_internal):
	  support "exception: false" kwarg
	* ext/socket/init.c (rsock_s_recvfrom_nonblock):
	  ditto
	* ext/socket/init.c (rsock_s_recvfrom_nonblock): use rsock_opt_false_p
	* ext/socket/socket.c (sock_connect_nonblock): ditto
	* ext/socket/rubysocket.h (rsock_opt_false_p): new function
	* ext/socket/basicsocket.c (bsock_recv_nonblock): update rdoc
	* ext/socket/udpsocket.c (udp_recvfrom_nonblock): ditto