@@ -50,7 +50,6 @@ tcp_sockaddr(struct sockaddr *addr, socklen_t len)
 static VALUE
 tcp_s_gethostbyname(VALUE obj, VALUE host)
 {
-    rb_secure(3);
     return rsock_make_hostent(host, rsock_addrinfo(host, Qnil, SOCK_STREAM, AI_CANONNAME),
 			tcp_sockaddr);
 }
