@@ -25,7 +25,7 @@
 
 #undef rb_secure
 #undef rb_set_safe_level
-#undef ruby_safe_level_4_warning
+#undef ruby_safe_level_3_warning
 
 int
 ruby_safe_level_4_warning(void)
@@ -52,7 +52,7 @@ rb_set_safe_level(int level)
 
     if (level > th->safe_level) {
 	if (level > SAFE_LEVEL_MAX) {
-	    rb_raise(rb_eArgError, "$SAFE=4 is obsolete");
+	    rb_raise(rb_eArgError, "$SAFE=3 and 4 is obsolete");
 	}
 	th->safe_level = level;
     }
@@ -79,7 +79,7 @@ safe_setter(VALUE val)
 	rb_warning("$SAFE=3 does no sandboxing");
     }
     if (level > SAFE_LEVEL_MAX) {
-	rb_raise(rb_eArgError, "$SAFE=4 is obsolete");
+	rb_raise(rb_eArgError, "$SAFE=3 and 4 is obsolete");
     }
     th->safe_level = level;
 }
