@@ -325,21 +325,4 @@ class TestDir < Test::Unit::TestCase
       end
     }
   end
-
-  def test_insecure_chdir
-    assert_raise(SecurityError) do
-      proc do
-        $SAFE=3
-        Dir.chdir("/")
-      end.call
-    end
-    m = "\u{79fb 52d5}"
-    d = Class.new(Dir) {singleton_class.class_eval {alias_method m, :chdir}}
-    assert_raise_with_message(SecurityError, /#{m}/) do
-      proc do
-        $SAFE=3
-        d.__send__(m, "/")
-      end.call
-    end
-  end
 end
